# Sysmonitor

./: .gitignore  AGENTS.md  LICENSE  README.md  SysMonitor.cmd  SysMonitor.spec  build.ps1  main.py  monitor.py  pyproject.toml  requirements.txt
.forgejo/workflows/: build.yml
.github/workflows/: build-sring0.yml  build.yml  test-screenshot.yml
docs/: index.html
libs/: THIRD_PARTY.md
scripts/: get-deps.ps1  test_screenshot.py
sysmonitor/: __init__.py  __main__.py  elevation.py  main.py  pawnio.py  single_instance.py  splash.py  utils.py  widgets.py  window.py
sysmonitor/core/: main.py  splash.py  window.py
sysmonitor/data/: monitor_data.py
sysmonitor/data/monitors/: __init__.py  cpu_sensors.py  gpu.py  network.py
sysmonitor/monitors/: cpu_sensors.py  gpu.py
sysmonitor/ui/: widgets.py
sysmonitor/utils/: config.py  pawnio.py  utils.py
