[project]
name = "sysmonitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nvidia-ml-py>=12.0",
    "psutil>=5.9",
    "pyqt6>=6.4",
    "pythonnet>=3.0 ; sys_platform == 'win32'",
    "pywin32>=305 ; sys_platform == 'win32'",
    "pywintrace>=0.2 ; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "nuitka[onefile]>=4.1.3",
]
